--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(test_analyze C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(test_analyze main.c)
+add_executable(test_analyze main.c
+        test_header.h)
